--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="degree">°</string>
     <string name="Description">Description</string>
     <string name="search">Search</string>
+    <string name="Pressure">Pressure</string>
 </resources>
